samples/_failures_safe/1761243386_aba7eb_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_4c74fbe4.c: In function ‘main’:
./samples/SAFE/__tmp_4c74fbe4.c:170:23: error: expected ‘)’ at end of input
  170 |         if (token.type
      |            ~          ^
      |                       )
./samples/SAFE/__tmp_4c74fbe4.c:170:9: error: expected declaration or statement at end of input
  170 |         if (token.type
      |         ^~
./samples/SAFE/__tmp_4c74fbe4.c:170:9: error: expected declaration or statement at end of input
